--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                <li>Where feasible, reopen hospitals that are no longer being used as hospitals, such as the Blackwood Hospital;</li>
                <li>Where feasible, reopen emergency departments that have been closed, like the emergency department at the Repat;</li>
                <li>Build new hospitals, and design them to efficiently provide the most desperately needed services;</li>
-               <li>Increase the number of clinical psychology placements, especially Masters programs, and medical degrees by a large enough number to address shortages in care
+               <li>Allow more Australians to study clinical psychology, especially Masters programs, and medical degrees in South Australia;</li>
                <li>Allow psychologists to assist psychiatrists in mental hospitals;</li>
                <li>Hire more social workers and occupational therapists to assist psychiatrists in our mental hospitals;</li>
                <li>Investigate the viability of specialist graduate medical programs at our universities, so that qualified health professionals can become specialist doctors by learning only what is relevant to a chosen specialty.</li>
