--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
               <small>(4.0_Cheap_Essentials)</small>
              </h4>
 
-             <p>Reduce prices on essentials like electricity, and healthy foods for South Australians through regulation and compensation. In a similar manner to the Pharmaceutical Benefits Scheme, the Quality of Life Commission will regulate to reduce the price of these essentials for South Australians, and compensate only the amount needed to ensure adequate supply and good quality. Reducing the cost of electricity will help to reduce pollution, by helping people switch from polluting gas and wood burning to electricity. The Quality of Life Commission will pay for this with measures such as Policy 3.0 above.</p>
+             <p>Reduce prices on essentials like electricity, and healthy foods for South Australians through regulation and compensation. In a similar manner to the Pharmaceutical Benefits Scheme, the Quality of Life Commission will regulate to reduce the price of these essentials for South Australians, and compensate only the amount needed to ensure adequate supply and good quality. Reducing the cost of electricity will help to reduce pollution, by helping people switch from polluting gas and wood burning to electricity.</p>
 
              <h4>Provide HECS-style loans for efficiency upgrades<br>
     <small>(5.0_Efficiency_Loans)</small>
@@ -297,8 +297,6 @@
                <li>Hire more social workers and occupational therapists to assist psychiatrists in our mental hospitals;</li>
                <li>Investigate the viability of specialist graduate medical programs at our universities, so that qualified health professionals can become specialist doctors by learning only what is relevant to a chosen specialty.</li>
              </ul>
-             
-             <p>The Quality of Life Commission will pay for this with measures such as Policy 3.0 above.</p>
 
              <h3>Policing</h3>
 
@@ -306,7 +304,7 @@
     <small>(12.0_Police_Support)</small>
 </h4>
 
-              <p>Provide funding to create a new unarmed, plain-clothed position called a Police Support Officer to support SAPOL in their work, and hire at least 200 people for this position. Provide funding for the police to improve their hiring processes with better objective testing of applicants and better job performance assessment processes, and for experts at our universities to carry out helpful studies into better hiring procedures. The Quality of Life Commission will pay for this with measures such as Policy 3.0 above.</p>
+              <p>Provide funding to create a new unarmed, plain-clothed position called a Police Support Officer to support SAPOL in their work, and hire at least 200 people for this position. Provide funding for the police to improve their hiring processes with better objective testing of applicants and better job performance assessment processes, and for experts at our universities to carry out helpful studies into better hiring procedures.</p>
 
              <h3>Pollution, traffic congestion and the algae crisis
              </h3>
@@ -351,9 +349,10 @@
 
               <p>Deliver integrity in politics, transparency and accountability in government and a stronger democracy, where politicians serve and represent their communities and pursue the interests of their electorate, not a separate agenda of a political party or corporations. My plan for this will later be published in detail, but the plan starts with supporting the movement for more independent politicians in this country. In the meantime, there are some reforms that ideally should be implemented immediately, even prior to the coming election in March 2026:</p>
               <ul>
-               <li>17.1 Tighten the cap on candidate spending. Although most political donations have been banned, wealthy or otherwise well-resourced candidates can still spend up to $100 000 on their campaign during the expenditure period alone, and as much as they like outside the expenditure period, while other candidates may not be able to afford spending even $10 000. This creates an unfair disadvantage for less wealthy candidates, and even some of the wealthier candidates might prefer to spend less than $100 000 on the condition that none of their opponents is spending more than they are. The upfront advance funding for new candidates is $5000. The default statewide cap should be lowered to $10 000 per candidate in the pre-election period, with candidates having the right to negotiate a different cap for their electorate between $5000 and $100 000 if the majority of candidates in that electorate agree to it. There should also be a cap introduced for total expenditure in the years outside the pre-election period.</li>
-               <li>17.2 Ban political campaigning at polling booths. It's annoying, and it creates further bias towards candidates with more resources.</li>
-               <li>17.3 End the requirement for political candidates to put an exact address on their political materials. This is unfair on candidates who don't have an office, since they currently would have to put their exact home address on all materials including on the internet. PO Boxes aren't currently allowed as the address, and even this probably shouldn't be a requirement in the days of the internet and email. In situations where it's obvious who authorised the content, eg. it is posted on an official account online, the "Authorised by" message should not be required at all.</li>
+               <li>17.1 Provide ECSA with adequate funding to provide information to every voter about every candidate in their electorate and their policies. It's not expensive to send a pamphlet to every voter. It ensures a balanced amount of space and advertising for each candidate, and it also allows the following policy:</li>
+               <li>17.2 Tighten the cap on candidate spending. Although large political donations have been banned, wealthy or otherwise well-resourced candidates can still spend up to $100 000 on their campaign during the expenditure period alone, and as much as they like outside the expenditure period, while other candidates may not be able to afford spending even $10 000. This creates an unfair disadvantage for less wealthy candidates, and even some of the wealthier candidates might prefer to spend less than $100 000 on the condition that none of their opponents is spending more than they are. Since the upfront advance funding for new candidates is $5000, the default statewide cap should be lowered to $10 000 per candidate in the pre-election period, with candidates having the right to negotiate a different cap for their electorate between $5000 and $100 000 if the majority of candidates in that electorate agree to it. There should also be a cap introduced for total expenditure in the years outside the pre-election period.</li>
+               <li>17.3 Ban political campaigning at polling booths. It's annoying, and it creates further bias towards candidates with more resources.</li>
+               <li>17.4 End the requirement for political candidates to put an exact address on their political materials. This is unfair on candidates who don't have an office, since they currently would have to put their exact home address on all materials including on the internet. PO Boxes aren't currently allowed as the address, and even this probably shouldn't be a requirement in the days of the internet and email. In situations where it's obvious who authorised the content, eg. it is posted on an official account online, the "Authorised by" message should not be required at all.</li>
                <!-- <li>17.4 Hold council elections on the same day as state elections in order to increase council voting and thereby increase accountability of local councils. Allow candidates to run for multiple positions (but not multiple wards/electorates), such as mayor and MP, but only accept one of the positions if they win more than one. Due to our preferential voting system, votes can easily be redistributed if a candidate wins more than one position and has to turn one down.</li> -->
               </ul>
 
@@ -377,7 +376,7 @@
                <small>(19.1_Right_To_Housing)</small>
               </h4>
 
-              <p>Ensure safe emergency housing for the homeless, including facilities for women and children, and seperate all-gender shelters for adults including men.</p>
+              <p>Ensure safe emergency housing for the homeless, including facilities for women and children, and separate facilities that provide emergency housing to all other adults including men.</p>
 
               <h4>Address the environmental causes of mental illness and violence<br>
                <small>(19.2_Environmental_Health)</small>
@@ -395,7 +394,7 @@
                <small>(19.4_Free_Sport)</small>
               </h4>
 
-              <p>Provide sporting clubs and similar clubs and health education services with the funding to provide South Australians with at least one free group lesson per year. The Quality of Life Commission will pay for this with measures such as Policy 3.0 above.</p>
+              <p>Provide sporting clubs and similar clubs and health education services with the funding to provide South Australians with at least one free group lesson per year.</p>
 
               <h4>More diet soft drink than regular soft drink<br>
                <small>(19.5_Healthier_Drinks)</small>
