--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
 
              <p>I will always be seeking to further improve my policies and ensure they are aligned with the wishes of the electorate, including in response to feedback from the people of Waite. Please send any feedback to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
 
-             <h3>A warning to interfering corporations and criminals</h3>
+             <h3>A warning to interfering corporations and orgnaised crime</h3>
 
              <h4>Eliminate and punish harmful corporate interference in our elections and our parliament<br>
               <small>(1.0_Corporate_Interference)</small>
              </h4>
 
-             <p>Corporations often interfere in elections and in parliament to prevent policies that would benefit most people but reduce their profits. Some of these businesses, including at least some casinos, have ties to criminals and money laundering. Although large political donations have been banned in South Australia, there are still legal and illegal means that they may attempt to use to influence elections. To prevent this we need to:</p>
+             <p>Corporations often interfere in elections and in parliament to prevent policies that would benefit most people but reduce their profits. Some of these businesses, including at least some casinos, have ties to organised crime and money laundering. Although large political donations have been banned in South Australia, there are still legal and illegal means that they may attempt to use to influence elections. To prevent this we need to:</p>
              <ul>
               <li>Prohibit interference in elections or in politics to prevent policies that would benefit most people but reduce one's profits, and retroactively include interference in recent elections.</li>
               <li>Ensure punishments are severe enough to successfully discourage this type of interference in our democracy; consider including asset confiscation for corporations and gaol time for individuals; consider setting up government-owned competitors in any industries guilty of these types of crimes.</li>
