--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
              <ul>
               <li>Prohibit interference in elections or in politics to prevent policies that would benefit most people but reduce one's profits, and retroactively include interference in recent elections.</li>
               <li>Ensure punishments are severe enough to successfully discourage this type of interference in our democracy; consider including asset confiscation for corporations and gaol time for individuals; consider setting up government-owned competitors in any industries guilty of these types of crimes.</li>
-              <li>ICAC must be given the resources and oversight to ensure they thoroughly investigate corporations, politicians and political parties for this type of interference in recent elections.</li>
+              <li>Provide ICAC the resources and oversight to ensure they thoroughly investigate corporations, politicians and political parties for this type of interference in recent elections.</li>
              </ul>
 
              <h3>Quality of life and cost of essentials</h3>
@@ -321,7 +321,7 @@
 
               <p>14.1 Reduce all major pollutants by over 50% by 2030, aiming for at least 75% total reduction in CO<sub>2</sub>e in both GWP20 and GWP100. Major atmospheric pollutants in South Australia are carbon dioxide (CO<sub>2</sub>), methane, nitrous oxide (N<sub>2</sub>O), nitrogen dioxide (NO<sub>2</sub>), and particulate matter including black carbon.</p>
 
-              <p>14.2 Provide much higher frequency and higher quality public transport and workplace policies that reduce commuting at rush hour. Increase the frequency of bus services with a new electric or plug-in hybrid bus fleet. Make every second bus on each route free. Introduce more bus lanes to bypass traffic. A higher frequency of public transport services will not only reduce traffic congestion, but also reduce overcrowding on the buses, trains and trams themselves.</p>
+              <p>14.2 Provide much higher frequency and higher quality public transport and workplace policies that reduce commuting at rush hour. Greatly increase the frequency of bus services with a new electric bus fleet. Make every second bus on each route free. Introduce more bus lanes to bypass traffic. A higher frequency of public transport services will not only reduce traffic congestion, but also reduce overcrowding on the buses, trains and trams themselves.</p>
 
               <p>14.3 Reduce agricultural emissions by taxing the export of slaughterhouse products according to the total pollution created.</p>
 
