--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
              <p>Reduce prices on essentials like electricity, and healthy foods for South Australians through regulation and compensation. In a similar manner to the Pharmaceutical Benefits Scheme, the Quality of Life Commission will regulate to reduce the price of these essentials for South Australians, and compensate only the amount needed to ensure adequate supply and good quality. Reducing the cost of electricity will help to reduce pollution, by helping people switch from polluting gas and wood burning to electricity.</p>
 
              <h4>Provide HECS-style loans for efficiency upgrades<br>
-    <small>(5.0_Efficiency_Loans)</small>
-</h4>
+              <small>(5.0_Efficiency_Loans)</small>
+             </h4>
 
-             <p>Provide HECS-style loans for purchases that reduce costs and increase efficiency such as switching to electric heating, solar water heating, or repainting a dark roof to a heat-reflecting white. This will be designed to avoid causing increases in prices, and even reduce prices, by providing only enough to make the difference up to a target price.</p>
+             <p>Provide HECS-style loans for purchases that reduce costs and increase efficiency such as purchasing electric cars, switching to electric heating, adding solar water heating, or repainting a dark roof to a heat-reflecting white. This will be designed to avoid causing increases in prices, and even reduce prices, by providing only enough to make the difference up to a target price.</p>
 
              <h3>Keep people in their homes</h3>
 
@@ -325,7 +325,13 @@
 
               <p>14.3 Reduce agricultural emissions by taxing the export of slaughterhouse products according to the total pollution created.</p>
 
-              <p>14.4 Eliminate taxes on electric vehicle purchases, require an adequate number of charging stations in every parking area, and make charging free at times when there is an oversupply of electricity on the grid.</p>
+              <p>14.4 Make it more affordable to purchase an EV:</p>
+              <ul>
+               <li>Eliminate taxes on electric vehicle purchases;</li>
+               <li>Make charging stations free at times when there is an oversupply of electricity on the grid;</li>
+               <li>Require an adequate number of charging stations in every parking area;</li>
+               <li>Extend Labor's home battery scheme to vehicle to home (V2H) chargers, so that people can use their EV battery as a home battery.</li>
+              </p>
 
               <p>South Australia gets about 80% of our electricity from renewables, which puts us second after Tasmania, and first when it comes to solar and wind combined. In fact, when it comes to solar and wind combined, we are ahead of every country in the world, and ahead of every state in the United States. This puts us in a unique position to lead the entire world when it comes to addressing the other two biggest pollution sectors: transport and agriculture. Electricity production makes up less than 40% of global greenhouse gas emissions, so it is essential that South Australia demonstrate to the whole world how to eliminate pollution in these sectors in a way that provides maximum benefit to the state.</p>
 
