--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
              <p>I will always be seeking to further improve my policies and ensure they are aligned with the wishes of the electorate, including in response to feedback from the people of Waite. Please send any feedback to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
 
-             <h3>A warning to interfering corporations and orgnaised crime</h3>
+             <h3>Interfering corporations and orgnaised crime</h3>
 
              <h4>Eliminate and punish harmful corporate interference in our elections and our parliament<br>
               <small>(1.0_Corporate_Interference)</small>
@@ -208,13 +208,15 @@
              <p>Provide HECS-style loans for purchases that reduce costs and increase efficiency such as purchasing electric cars, switching to electric heating, adding solar water heating, or repainting a dark roof to a heat-reflecting white. This will be designed to avoid causing increases in prices, and even reduce prices, by providing only enough to make the difference up to a target price.</p>
 
              <h3>Keep people in their homes</h3>
+             (6.0_Keep_Homes)
+
+             <p>The first job of the Quality of Life Commission would be to keep people in their homes.</p>
 
              <p>We've all heard stories of long-term renters being kicked out of their home where they'd been living for years or decades, just so that the property can be sold to someone with more money. Most of us recognise this as an injustice, and it also incentivises investors owning a huge number of investment properties. To solve this we can:</p>
 
              <h4>Charge landlords if they don't rent or sell to the rightful resident<br>
     <small>(6.1_Right_To_Reside)</small>
-</h4>
-
+</h4>             
              <p>Incentivise property investors to do the right thing, by charging them if they do the wrong thing. For example, property investors will be charged if they have evicted someone from their home just to sell the property to someone wealthier, or if they have otherwise failed to allow the property to be used by the person or family with the greatest moral right to the property. The Quality of Life Commission will be instructed to devise a system for determining and enforcing this, and will determine the rate of these variable charges to ensure a fair price.</p>
 
              <h4>Provide HECS-style loans to assist the rightful resident at a regulated price<br>
@@ -333,7 +335,7 @@
                <li>Extend Labor's home battery scheme to vehicle to home (V2H) chargers, so that people can use their EV battery as a home battery.</li>
               </p>
 
-              <p>South Australia gets about 80% of our electricity from renewables, which puts us second after Tasmania, and first when it comes to solar and wind combined. In fact, when it comes to solar and wind combined, we are ahead of every country in the world, and ahead of every state in the United States. This puts us in a unique position to lead the entire world when it comes to addressing the other two biggest pollution sectors: transport and agriculture. Electricity production makes up less than 40% of global greenhouse gas emissions, so it is essential that South Australia demonstrate to the whole world how to eliminate pollution in these sectors in a way that provides maximum benefit to the state.</p>
+              <p>South Australia gets about 80% of our electricity from renewables, which puts us second after Tasmania, and first when it comes to solar and wind combined. In fact, when it comes to solar and wind combined, we are ahead of every country in the world, and ahead of every state in the United States. This puts us in a unique position to lead the entire world when it comes to addressing the other two biggest pollution sectors: transport and agriculture. Electricity production makes up less than 40% of global greenhouse gas pollution, and less than 20% in Australia, so it is essential that South Australia demonstrate to the whole world how to eliminate pollution in other sectors in a way that provides maximum benefit to the state.</p>
 
               <h4>Improve the Belair train line<br>
                <small>(15.0_Belair_Train)</small>
