--- a/index.html
+++ b/index.html
@@ -327,13 +327,14 @@
 
               <p>14.3 Reduce agricultural emissions by taxing the export of slaughterhouse products according to the total pollution created.</p>
 
-              <p>14.4 Make it more affordable to purchase an EV:</p>
+              <p>14.4 Make it easier to buy an EV:</p>
               <ul>
                <li>Eliminate taxes on electric vehicle purchases;</li>
+               <li>Provide HECS-style loans for buying an EV under Policy 5.0_Efficiency_Loans.</li>
                <li>Make charging stations free at times when there is an oversupply of electricity on the grid;</li>
                <li>Require an adequate number of charging stations in every parking area;</li>
                <li>Extend Labor's home battery scheme to vehicle to home (V2H) chargers, so that people can use their EV battery as a home battery.</li>
-              </p>
+              </ul>
 
               <p>South Australia gets about 80% of our electricity from renewables, which puts us second after Tasmania, and first when it comes to solar and wind combined. In fact, when it comes to solar and wind combined, we are ahead of every country in the world, and ahead of every state in the United States. This puts us in a unique position to lead the entire world when it comes to addressing the other two biggest pollution sectors: transport and agriculture. Electricity production makes up less than 40% of global greenhouse gas pollution, and less than 20% in Australia, so it is essential that South Australia demonstrate to the whole world how to eliminate pollution in other sectors in a way that provides maximum benefit to the state.</p>
 
@@ -341,7 +342,7 @@
                <small>(15.0_Belair_Train)</small>
               </h4>
 
-              <p>Currently trains going in opposite directions share the same track on the Belair line, and have to wait for each other to pass. Reduce this issue by duplicating the track wherever feasible. Once these works are done, electrify the line. Once these upgrades are complete, expand the Belair train line to Mount Barker.</p>
+              <p>Currently trains going in opposite directions share the same track on the Belair line and have to wait for each other to pass. Reduce this issue by duplicating the track wherever feasible. Once these works are done, electrify the line. Once these upgrades are complete, expand the Belair train line to Mount Barker.</p>
 
               <h4>Make environmentally friendly choices more affordable<br>
                <small>(16.0_Affordable_Options)</small>
