--- a/index.html
+++ b/index.html
@@ -675,6 +675,12 @@ function setIntroSmile(smileOn) {
     --box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
 }
 
+html {
+    scroll-padding-top: 150px; 
+    scroll-behavior: smooth;
+}
+
+
 body.dark-theme {
     --color-primary: var(--color-primary-dark);
     --color-secondary: var(--color-secondary-dark);
