--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
       <li>2.1 Regulate against corporations and landlords contributing to the quality of life crisis;</li>
       <li>2.2 Charge those corporations and landlords for harmful, inflationary or otherwise costly behaviour;</li>
       <li>2.3 Spend this revenue on reducing the cost of living and improving quality of life further. Advocate for constitutional reform that will allow us to further improve this commission by allowing it to implement its own variable charges.</li>
+      <li>2.4 Audit government spending to ensure that there is no waste including private contractor rorts, so that this money can be better spent on cost of living measures.</li>
      </ul>
      
      <p>The Quality of Life Commission will also have the mandate and resources necessary to investigate the government itself for inefficient spending such as private contractor rorts, and to close regulatory loopholes in any sector that is being taken advantage of by bad actors.</p>
