--- a/index.html
+++ b/index.html
@@ -958,7 +958,8 @@ body.dark-theme .policy-toc {
     color: white;
 }
 
-body.dark-theme .policy-toc a, li {
+body.dark-theme .policy-toc a,
+body.dark-theme .policy-toc li {
     color: white;
 }
 
