--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@ function applySavedTheme() {
 {       document.body.className = savedTheme; }
     else
 {       const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-        document.body.className = prefersDark ? 'dark-theme' : 'yellow-theme'; }
+        document.body.className = prefersDark ? 'dark-theme' : 'white-theme'; }
 }
 
 function toggleTheme() {
