--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
      <li>Solve the police staffing crisis;</li>
      <li>Protect our children, women and men from unfair treatment and harm, including from gambling ads and other advertising. Within the limits of our political system, I'll do what I can to protect everyone from injustice.</li>
     </ul>
-    <p>That might seem like a lot, but that's only because the bar has been set so low. Most of the above problems aren't hard to solve with the right plan, and enough people supporting it. <!-- Politicians just aren't really trying to solve them. Their skills are in campaigning and not policy, and think they will get paid just as much, or more, if they don't do the necessary policy work to solve anything. --></p> 
+    <p>That might seem like a lot, but that's only because the bar has been set so low over the last 50 years. Most of the above problems aren't hard to solve with the right plan, and enough people supporting it. <!-- Politicians just aren't really trying to solve them. Their skills are in campaigning and not policy, and think they will get paid just as much, or more, if they don't do the necessary policy work to solve anything. --></p> 
     <p>There are two crucial components to my plan:</p>
     <ul>
      <li>Real policy solutions to all of the above, which are detailed below and will continue to be improved further over time, including through feedback from the electorate;</li>
