--- a/index.html
+++ b/index.html
@@ -231,11 +231,12 @@
           <li>
               <a href="#19.0_Environmental_Health">Prevent harm to public wellbeing</a>
               <ul class="sub-toc-list">
-                   <li><a href="#19.1_Right_To_Housing">Ensure adequate emergency housing for the homeless</a> (19.1)</li>
-                   <li><a href="#19.2_Environmental_Health">Address the environmental causes of mental illness and violence</a> (19.2)</li>
-                   <li><a href="#19.3_Regulate_Advertising">Prevent harm from advertising and provide better info</a> (19.3)</li>
-                   <li><a href="#19.4_Free_Sport">Free sport and healthy activity classes</a> (19.4)</li>
-                   <li><a href="#19.5_Healthier_Drinks">More diet soft drink than regular soft drink</a> (19.5)</li>
+                   <li><a href="#19.1_Right_To_Housing">Ensure adequate emergency housing for the homeless and for victims of domestic violence</a> (19.1)</li>
+                   <li><a href="#19.2_Domestic_Violence">Support services for victims of domestic violence</a> (19.2)</li>>
+                   <li><a href="#19.3_Environmental_Health">Address the environmental causes of mental illness and violence</a> (19.3)</li>
+                   <li><a href="#19.4_Regulate_Advertising">Prevent harm from advertising and provide better info</a> (19.4)</li>
+                   <li><a href="#19.5_Free_Sport">Free sport and healthy activity classes</a> (19.5)</li>
+                   <li><a href="#19.6_Healthier_Drinks">More diet soft drink than regular soft drink</a> (19.6)</li>
               </ul>
           </li>
           <li>
@@ -286,7 +287,7 @@
       <small>(4.0_Cheap_Essentials)</small>
      </h4>
 
-     <p>Reduce prices on essentials like electricity, and healthy foods for South Australians through regulation and compensation. In a similar manner to the Pharmaceutical Benefits Scheme, the Quality of Life Commission will regulate to reduce the price of these essentials for South Australians, and compensate only the amount needed to ensure adequate supply and good quality. Reducing the cost of electricity will help to reduce pollution, by helping people switch from polluting gas and wood burning to electricity.</p>
+     <p>Reduce prices on essentials like electricity, and healthy foods for South Australians through regulation and compensation. In a similar manner to the Pharmaceutical Benefits Scheme, the Quality of Life Commission will regulate to reduce the price of these essentials for South Australians, and compensate only the amount needed to ensure adequate supply and good quality. Reducing the cost of electricity will help to reduce pollution, by helping people switch from polluting gas and wood burning to electricity. Prices will be regulated to be even lower or free at times when there is a surplus of electricity on the grid.</p>
 
      <h4 id="5.0_Efficiency_Loans">Provide HECS-style loans for efficiency upgrades<br>
       <small>(5.0_Efficiency_Loans)</small>
@@ -469,32 +470,38 @@
 
       <p>I will generally support any measure to prevent harm to public wellbeing, including the following:</p>
 
-      <h4 id="19.1_Right_To_Housing">Ensure adequate emergency housing for the homeless<br>
+      <h4 id="19.1_Right_To_Housing">Ensure adequate emergency housing for the homeless and for victims of domestic violence<br>
        <small>(19.1_Right_To_Housing)</small>
       </h4>
 
       <p>Ensure safe emergency housing for the homeless, including facilities for women and children, and separate facilities that provide emergency housing to all other adults including men.</p>
 
-      <h4 id="19.2_Environmental_Health">Address the environmental causes of mental illness and violence<br>
-       <small>(19.2_Environmental_Health)</small>
+      <h4 id="19.2_Domestic_Violence">Support services for victims of domestic violence<br>
+       <small>(19.2_Domestic_Violence)</small>
+      </h4>
+
+      <p>I support the government's investment of $674 million towards services for victims of domestic violence.</p>
+
+      <h4 id="19.3_Environmental_Health">Address the environmental causes of mental illness and violence<br>
+       <small>(19.3_Environmental_Health)</small>
       </h4>
 
       <p>Fund science, science integrity and science communication when it comes to the environmental causes of mental illness and violence, and develop science-based policy to address the causes of mental illness and violence. The science on the causes of mental illness and violence is inadequate, and the good science that has been done has not been adequately communicated to the public, who are exposed to simplistic and incorrect narratives about the causes of mental illness and violence, some of which increase conflict and hatred and lead to more violence.</p>
 
-      <h4 id="19.3_Regulate_Advertising">Prevent harm from advertising and provide better info<br>
-       <small>(19.3_Regulate_Advertising)</small>
+      <h4 id="19.4_Regulate_Advertising">Prevent harm from advertising and provide better info<br>
+       <small>(19.4_Regulate_Advertising)</small>
       </h4>
 
       <p>Give both SA Health and the EPA the power to regulate against harmful advertising, such as gambling ads or alcohol ads, especially when children may be present, and to regulate product packaging to better inform consumers about products.</p>
 
-      <h4 id="19.4_Free_Sport">Free sport and healthy activity classes<br>
-       <small>(19.4_Free_Sport)</small>
+      <h4 id="19.5_Free_Sport">Free sport and healthy activity classes<br>
+       <small>(19.5_Free_Sport)</small>
       </h4>
 
       <p>Provide sporting clubs and similar clubs and health education services with the funding to provide South Australians with at least one free group lesson per year.</p>
 
-      <h4 id="19.5_Healthier_Drinks">More diet soft drink than regular soft drink<br>
-       <small>(19.5_Healthier_Drinks)</small>
+      <h4 id="19.6_Healthier_Drinks">More diet soft drink than regular soft drink<br>
+       <small>(19.6_Healthier_Drinks)</small>
       </h4>
 
       <p>Require all venues and vending machines selling soft drink to sell more diet soft drink options than regular soft drink options.</p>
