--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
               <a href="#19.0_Environmental_Health">Prevent harm to public wellbeing</a>
               <ul class="sub-toc-list">
                    <li><a href="#19.1_Right_To_Housing">Ensure adequate emergency housing for the homeless and for victims of domestic violence</a> (19.1)</li>
-                   <li><a href="#19.2_Domestic_Violence">Support services for victims of domestic violence</a> (19.2)</li>>
+                   <li><a href="#19.2_Domestic_Violence">Support services for victims of domestic violence</a> (19.2)</li>
                    <li><a href="#19.3_Environmental_Health">Address the environmental causes of mental illness and violence</a> (19.3)</li>
                    <li><a href="#19.4_Regulate_Advertising">Prevent harm from advertising and provide better info</a> (19.4)</li>
                    <li><a href="#19.5_Free_Sport">Free sport and healthy activity classes</a> (19.5)</li>
