--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
                   <li><a href="#17.4_Address_End">End the requirement for political candidates to put an exact address</a> (17.4)</li>
               </ul>
           </li>
-          <li>
-              <a href="#18.0_Reclaim_Land">Keep South Australian land in South Australian hands</a>
-          </li>
+<!--           <li>
+              <a href="#18.0_"></a>
+          </li> -->
           <li>
               <a href="#19.0_Environmental_Health">Prevent harm to public wellbeing</a>
               <ul class="sub-toc-list">
@@ -456,11 +456,11 @@
 
       <p>The job of a politician in our lower house is to serve and represent their electorate. The most important aspect of this is to pursue and prioritise policies that align with the agenda of the electorate, and not to pursue any other agenda. None of our major political parties recognise this as the foundational principle of their constitution, and for at least the last 80 years or so, it seems that political parties have prevented the accountability of politicians to their electorate more than they have held politicians accountable. Getting more independents into parliament is the first step towards solving this problem, especially independents who are committed to their democratic duties to their electorate.</p>
 
-      <h4 id="18.0_Reclaim_Land">Keep South Australian land in South Australian hands<br>
-       <small>(18.0_Reclaim_Land)</small>
+<!--       <h4 id="18.0_"><br>
+       <small></small>
       </h4>
       
-      <p>The largest ranch in the world, Anna Creek Station in South Australia, belongs to Gina Rinehart and a Chinese corporation. South Australian land and property should, by law, belong entirely to South Australian permanent residents, past permanent residents and soon-to-be permanent residents, except where it belongs to the federal government.</p>
+      <p></p> -->
 
       <h3>Public wellbeing and preventing violence</h3>
 
