--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 <small>(8.0_Reduce_Immigration)</small>
 </h4>
 
-     <p>I will support reducing immigration while opposing racism, opposing the mistreatment of immigrants and opposing reduction in the refugee intake.</p>
+     <p>Support reducing the rate of immigration while opposing racism, opposing the mistreatment of immigrants and opposing reduction in the refugee intake.</p>
 
      <p>The left are currently empowering racism and xenophobia by rejecting the more valid concerns and democratic rights of voters when it comes to immigration. During the Covid border closures, rents became cheaper. When businesses opened back up again, but international borders were still shut, unemployment dropped to the lowest rate in 50 years. And these are only the short-term effects. In the long-term, the quality of housing we are living in will continue to get worse if the population density in our cities continues to grow due to an intake of millions per decade, the rate that corporations and their political parties have chosen. It also increasingly makes it hard to solve other problems: harder to build enough public transport and eliminate traffic congestion and transport pollution, harder to reduce harm to our environment and animals through land use, resource use, production, construction and consumption.</p>
 
