--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
      <p>Provide government-supported apprenticeships and job placements for all unemployed and underemployed Australians who want them by creating a South Australian government employment service. Expert in the field, David O'Halloran, PhD, recommends creating government employment services at the state level rather than at the federal level. Currently we have neither. The existing private services are inadequate. With the support of the funding from the Quality of Life Commission's charges, the South Australian government employment service will ensure that everyone has the support they need to do the work that will most benefit South Australians, and that businesses that need support to help with this will be given that support.</p>
 
-     <h4 id="8.0_Reduce_Immigration">Maintain the refugee intake but reduce net immigration<br>
+     <h4 id="8.0_Reduce_Immigration">Reduce net immigration without reducing the refugee intake<br>
 <small>(8.0_Reduce_Immigration)</small>
 </h4>
 
